feat: [CDS-73807]: fix tags filter criteria for pipelines list and executions list (#50911)
* feat: [CDS-73807]: fix tags filter criteria for pipelines list and executions list

* add check for size > 0

* added UTs