@@ -291,13 +291,23 @@ public class QuickFilterTest extends CategoryTest {
     // Testing the execution list by tags
     Criteria form = pmsExecutionServiceImpl.formCriteria(accountId, orgId, projId, pipelineId, null,
         PipelineExecutionFilterPropertiesDTO.builder()
-            .pipelineTags(Collections.singletonList(NGTag.builder().key("key1").value("val1").build()))
+            .pipelineTags(List.of(
+                NGTag.builder().key("key1").value("val1").build(), NGTag.builder().key("key1").value(null).build()))
             .build(),
         null, null, null, false, false, true);
 
     // Verify that tags are present in criteria.
     assertEquals(form.getCriteriaObject().get("$and").toString(),
-        "[Document{{$and=[Document{{$or=[Document{{tags.key=Document{{$in=[key1, val1]}}}}, Document{{tags.value=Document{{$in=[key1, val1]}}}}]}}]}}]");
+        "[Document{{$and=[Document{{$or=[Document{{tags.key=Document{{$in=[key1]}}}}, Document{{tags.value=Document{{$in=[key1]}}}}]}}], tags=Document{{$in=[NGTag(key=key1, value=val1)]}}}}]");
+    assertThatThrownBy(()
+                           -> pmsExecutionServiceImpl.formCriteria(accountId, orgId, projId, pipelineId, null,
+                               PipelineExecutionFilterPropertiesDTO.builder()
+                                   .pipelineTags(List.of(NGTag.builder().key("key1").value("val1").build(),
+                                       NGTag.builder().key(null).value("val1").build()))
+                                   .build(),
+                               null, null, null, false, false, true))
+        .isInstanceOf(InvalidRequestException.class)
+        .hasMessage("Key in Pipeline Tags filter cannot be null");
   }
 
   @Test
